header_footer_added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Assignment 01</title>
 </head>
-<body>
-    
+<body class="primary-font">
+    <header class="d-flex container">
+        <h2>Emadul.Islam</h2>
+        <button class="primary-font">Download resume</button>
+    </header>
+    <main>
+        
+    </main>
+    <footer id="contact">
+        <div class="footerContent container d-flex align-items-center">
+            <h5>An Open Commitment by Emadul islam</h5>
+            <div class="social">
+                <a href="#"><img src="./assets//images/facebook.svg" alt=""></a>
+                <a href="#"><img src="./assets//images/github.svg" alt=""></a>
+                <a href="#"><img src="./assets//images/linkedin.svg" alt=""></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
