add_banner_section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
         <button class="primary-font">Download resume</button>
     </header>
     <main>
+          <!-- banner -->
+          <section class="hero d-flex">
+            <div class="content container text-center">
+                <img src="./assets/images/hero-img.png" alt="">
+                <h1>"In the near future, I hope to become a Developer."</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <a href="#contact">
+                    <button class="primary-btn primary-font">
+                        Contact with me
+                    </button>
+                </a>
+               
+            </div>
+        </section>
         
     </main>
     <footer id="contact">
