challage part addded

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>Assignment 01</title>
 </head>
 <body class="primary-font ">
     <header class="d-flex container">
@@ -21,9 +21,12 @@
                 <img src="./assets/images/hero-img.png" alt="">
                 <h1>"In the near future, I hope to become a Developer."</h1>
                 <p>I aspire to advance my career by becoming a skilled Developer, leveraging my technical skills and creativity to build innovative solutions.</p>
+                <a href="#contact">
                     <button class="primary-btn primary-font">
                         Contact with me
                     </button>
+                </a>
+                    
                
             </div>
         </section>
@@ -176,13 +179,13 @@
                 </div>
             </section>
     </main>
-    <footer>
+    <footer id="contact">
         <div class="footerContent container d-flex align-items-center">
             <h5>An Open Commitment by Emadul islam</h5>
             <div class="social">
                 <a href="https://www.facebook.com/emadulislam2004"><img src="./assets//images/facebook.svg" alt=""></a>
-                <a href="#"><img src="./assets//images/github.svg" alt=""></a>
-                <a href="#"><img src="./assets//images/linkedin.svg" alt=""></a>
+                <a href="https://github.com/emadulislam04"><img src="./assets//images/github.svg" alt=""></a>
+                <a href="https://www.linkedin.com/in/emadulislam04/"><img src="./assets//images/linkedin.svg" alt=""></a>
             </div>
         </div>
     </footer>
