footer social issue fixed

--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
         <div class="footerContent container d-flex align-items-center">
             <h5>An Open Commitment by Emadul islam</h5>
             <div class="social">
-                <a href="https://www.facebook.com/emadulislam2004"><img src="./assets//images/facebook.svg" alt=""></a>
-                <a href="https://github.com/emadulislam04"><img src="./assets//images/github.svg" alt=""></a>
-                <a href="https://www.linkedin.com/in/emadulislam04/"><img src="./assets//images/linkedin.svg" alt=""></a>
+                <a href="https://www.facebook.com/emadulislam2004" target="_blank"><img src="./assets//images/facebook.svg" alt=""></a>
+                <a href="https://github.com/emadulislam04" target="_blank"><img src="./assets//images/github.svg" alt=""></a>
+                <a href="https://www.linkedin.com/in/emadulislam04/" target="_blank"><img src="./assets//images/linkedin.svg" alt=""></a>
             </div>
         </div>
     </footer>
